--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "telegram-auth-backend",
+  "name": "telegram-firebase-auth",
   "version": "1.0.0",
-  "description": "Telegram Mini App Auth API (initData verification and Firebase Custom Token).",
-  "main": "api/telegramAuth.js",
-  "scripts": {
-    "start": "node api/telegramAuth.js"
-  },
+  "main": "api/telegram-auth.js",
+  "type": "module",
   "dependencies": {
-    "firebase-admin": "^11.5.0",
-    "body-parser": "^1.20.1",
-    "crypto": "^1.0.1",
-    "url": "^0.11.0",
-    "dotenv": "^16.0.3"
-  },
-  "type": "commonjs"
+    "firebase-admin": "^12.6.0"
+  }
 }
